fixed image alignment and sizes in projects-slideshow section on main page

--- a/styles.css
+++ b/styles.css
@@ -74,21 +74,24 @@ body {
     flex-flow: row wrap;
     align-items: center;
     gap: 20px;
+    margin-top: 60px;
 }
 
 .project-card {
-    max-width: 100px;
     display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
+    flex-flow: column wrap;
     align-items: center;
 }
 
 .project-card img {
-    border: solid 2px rgb(152, 152, 236);
-    min-width: 80px;
-    min-height: 80px;
+    width: 300px;
+    height: 200px;
     border-radius: 6px;
+}
+
+.project-card p {
+    text-align: center;
+    max-width: 250px;
 }
 
 .testimonial {
